[workspace]
resolver = "2"
members = [
    "act-core",
    "act-derive",
]

[package]
name = "act-lint"
version = "0.1.0"
authors = ["Yogesh <yogesh@lonkar.org>", "Mo <msharbaji@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "cargo", "env", "unicode", "wrap_help", "string"] }

