[package]
name = "act-core"
version = "0.1.0"
authors = ["Yogesh <yogesh@lonkar.org>", "Mo <msharbaji@gmail.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_valid = { version = "0.16.3", features = ["yaml", "serde_yaml"] }
serde_with = "3.1.0"
syn = "2.0.28"
serde_yaml = "0.9.25"
act-derive = { path = "../act-derive" }
